# ActiveHs

./: .gitignore  Args.hs  Converter.hs  Html.hs  Main.hs  Parse.hs  Qualify.hs  QuickCheck.hs  Result.hs  Simple.hs  Smart.hs  Special.hs  Specialize.hs  Test.hs  activehs.cabal  stack.yaml
ActiveHs/: ActiveHsContext.hs  Args.hs  Base.hs  Bootstrap.hs  Converter.hs  GHCi.hs  Hoogle.hs  Logger.hs  Parser.hs  Result.hs  Specialize.hs  Translation.hs  WebServer.hs
ActiveHs/Translation/: Base.hs  Dictionary.hs  Entries.hs  I18N.hs
copy/: common.css
docker/container-script/: build  run
docker/debian/: Dockerfile  Dockerfile_release
main/: Main.hs
