name:                activehs
version:             0.3.2
category:            Education, Documentation
synopsis:            Haskell code presentation tool
description:
    ActiveHs is a Haskell source code presentation tool, developed for
    education purposes.
    .
    User's Guide: <http://lambda.inf.elte.hu/fp/UsersGuide_en.xml>
    .
    Developer's Documentation (partial): <http://lambda.inf.elte.hu/fp/DevDoc_en.xml>
    .
    The software is in prototype phase, although it already served more
    than 700 000 user requests at Eötvös Loránd University Budapest, Hungary.
    .
    Note that this software has many rough edges; you are welcome to
    work on it!
stability:           alpha
license:             BSD3
license-file:        LICENSE
author:              Péter Diviánszky
maintainer:          Artúr Poór <gombocarti@gmail.com>
cabal-version:       >=1.6
build-type:          Simple

data-files:
    copy/*.css, 
    copy/*.js, 
    copy/icon.ico, 
    template/*.template,
    doc/UsersGuide_en.lhs,
    doc/DevDoc_en.lhs,
    doc/watchserver.sh

source-repository head
  type: git
  location: https://github.com/poor-a/ActiveHs

source-repository this
  type: git
  location: https://github.com/poor-a/ActiveHs/tree/0.3.2
  tag: 0.3.2

Executable activehs
  GHC-Options: -threaded -rtsopts -with-rtsopts=-N2 -Wall -fwarn-tabs -fwarn-monomorphism-restriction -fwarn-missing-import-lists
  Main-is: 
    Main.hs
  Other-modules:
    Paths_activehs,
    Parse,
    Converter,
    Args,
    Simple,
    Smart,
    Cache,
    Hash,
    Specialize,
    Qualify,
    Lang,
    Result,
    HoogleCustom,
    Html,
    Logger,
    QuickCheck,
    Snap,
    Special

  Build-Depends:
    highlighting-kate,
    hoogle,
    dia-base,
    activehs-base,
    dia-functions,
    data-pprint,
    base,
    QuickCheck,
    array,
    directory,
    containers,
    filepath,
    text,
    snap-core,
    snap-server,
    syb,
    haskell-src-exts,
    bytestring,
    utf8-string,
    xhtml,
    blaze-html,
    blaze-markup,
    pureMD5,
    deepseq,
    exceptions,
    split,
    pandoc,
    time,
    old-time,
    process,
    hint,
    simple-reflect,
    mtl,
    old-locale,
    cmdargs
