name:                activehs
version:             0.3.2
category:            Education, Documentation
synopsis:            Haskell code presentation tool
description:
    ActiveHs is a Haskell source code presentation tool, developed for
    education purposes.
    .
    User's Guide: <http://lambda.inf.elte.hu/fp/UsersGuide_en.xml>
    .
    Developer's Documentation (partial): <http://lambda.inf.elte.hu/fp/DevDoc_en.xml>
    .
    The software is in prototype phase, although it already served more
    than 700 000 user requests at Eötvös Loránd University Budapest, Hungary.
    .
    Note that this software has many rough edges; you are welcome to
    work on it!
stability:           alpha
license:             BSD3
license-file:        LICENSE
author:              Péter Diviánszky
maintainer:          Artúr Poór <gombocarti@gmail.com>
cabal-version:       >=1.8
build-type:          Simple

data-files:
    static/css/*.min.css
    static/js/bootstrap.bundle.min.js
    static/js/*.min.js
    static/fonts/*.eot
    static/fonts/*.svg
    static/fonts/*.ttf
    static/fonts/*.woff
    static/fonts/*.woff2
    copy/*.css, 
    copy/*.js, 
    copy/icon.ico, 
    template/*.template,
    doc/UsersGuide_en.lhs,
    doc/DevDoc_en.lhs,
    doc/watchserver.sh

source-repository head
  type: git
  location: https://github.com/poor-a/ActiveHs

source-repository this
  type: git
  location: https://github.com/poor-a/ActiveHs/tree/0.3.2
  tag: 0.3.2

Library
  GHC-Options: -Wall -fwarn-tabs -fwarn-monomorphism-restriction -fwarn-missing-import-lists
  Exposed-modules:
    ActiveHs.ActiveHsContext
    ActiveHs.Args
    ActiveHs.Bootstrap
    ActiveHs.Converter
    ActiveHs.GHCi
    ActiveHs.Hoogle
    ActiveHs.Logger
    ActiveHs.Parser
    ActiveHs.Result
    ActiveHs.Specialize
    ActiveHs.Translation
    ActiveHs.Translation.Base
    ActiveHs.Translation.Dictionary
    ActiveHs.Translation.Entries
    ActiveHs.Translation.I18N
    ActiveHs.WebServer

  Other-modules:
    ActiveHs.Base
    Paths_activehs

  Build-Depends:
    aeson,
    blaze-html,
    highlighting-kate,
    hoogle,
    dia-base,
    dia-functions,
    data-pprint,
    dlist,
    base,
    array,
    directory,
    containers,
    filepath,
    ghc,
    ghc-paths,
    lens,
    text,
    snap,
    snap-core,
    snap-server,
    syb,
    haskell-src-exts,
    bytestring,
    utf8-string,
    xhtml,
    lucid,
    pureMD5,
    deepseq,
    exceptions,
    split,
    pandoc,
    time,
    old-time,
    process,
    hint,
    simple-reflect,
    mtl,
    old-locale,
    cmdargs,
    pcre-light,
    template-haskell,
    unordered-containers

Executable activehs
  Build-Depends: base, activehs
  Hs-Source-Dirs: main
  Main-is: Main.hs
  GHC-Options: -threaded -rtsopts -with-rtsopts=-N2 -Wall -fwarn-tabs -fwarn-monomorphism-restriction -fwarn-missing-import-lists